# osobnyak

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.run/: runserver.run.xml
media/catalog/Модули/: Описание модулей.docx
media/catalog/Модули/Модуль1/: Описание модуль1.docx
osobnyak/: admin.py  apps.py  models.py  urls.py  views.py
osobnyak/migrations/: 0001_initial.py  0002_fill_products.py  0003_category_page.py  0004_alter_category_options_alter_product_options.py  0005_product_enabled.py
osobnyak/static/catalog/Домики для кемпинга/: Описание домиков для кемпинга.docx
osobnyak/static/catalog/Модули/Модуль2/: Описание модуль2.docx
osobnyak/static/css/: flaticon.css  my.css  owl.carousel.min.css  style.css
osobnyak/static/js/: main.js
osobnyak/templates/: about.html  base.html  catalog.html  contacts.html  houses.html  index.html  products.html  projects.html
osobnyak/templatetags/: catalog_tags.py
project/: settings.py  urls.py
