[tool.poetry]
name = "osobnyak"
version = "0.1.0"
description = ""
authors = ["Denis Buryi <denis@buryi.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
